--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ body {
 	font-family: 'CentraNo2', sans-serif;
 	font-weight: 400;
 	color: #fff;
-	background-color: #121212;
+	background-color: $Dark;
 
 	position: relative;
 
