--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -9,6 +9,8 @@ $White: #ffffff;
 $Black: #000000;
 $Gray: #939393;
 
+$Dark: #121212;
+
 //* -- Shadows --
 $SmoothShadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
 
