--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,15 +1,19 @@
 //? == Vars ==
 
 //* -- Colors --
-$PrimaryGreen: #29a19c;
-$PrimaryYellow: #ecca75;
-$PrimaryRed: #f05454;
+$Primary: #c778dd;
+$BG: #282c33;
 
 $White: #ffffff;
 $Black: #000000;
-$Gray: #939393;
+$Gray: #abb2bf;
 
-$Dark: #121212;
+//* -- Gradients --
+$MainGradient: linear-gradient(
+	90deg,
+	rgba($Primary, 0.5) 0%,
+	rgba($BG, 0.5) 100%
+);
 
 //* -- Shadows --
 $SmoothShadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
@@ -18,7 +22,3 @@ $SmoothShadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
 $trans: 0.32s ease-in-out;
 $trans-fast: 0.18s ease-in-out;
 $trans-slow: 0.4s ease-in-out;
-
-// $Color-Gray-1: #000000;
-// $MainText: #f1f1f1;
-// $SecondaryText: #888888;
