--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
 //? == App ==
 
+.App {
+	background: url('./assets/img/home-bg.png') top center / 100%
+		no-repeat;
+}
+
 .container {
 	width: 100%;
 	max-width: 1280px;
@@ -7,7 +12,7 @@
 
 	position: relative;
 
-	padding: 20px;
+	padding: 0 20px;
 }
 
 .header {
