--- a/src/index.scss
+++ b/src/index.scss
@@ -10,10 +10,11 @@ html {
 }
 
 body {
-	font-family: 'CentraNo2', sans-serif;
+	font-family: 'Fira Code', sans-serif;
+	font-size: 16px;
 	font-weight: 400;
-	color: #fff;
-	background-color: $Dark;
+	color: $White;
+	background-color: $BG;
 
 	position: relative;
 
