--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,14 @@
 //? == App ==
 
 .App {
-	background: url('./assets/img/home-bg.png') top center / 100%
-		no-repeat;
+	&__container {
+		padding-top: 114px !important;
+	}
 }
 
 .container {
 	width: 100%;
-	max-width: 1280px;
+	max-width: 1064px;
 	margin: 0 auto;
 
 	position: relative;
